--- a/Android/PercepT/app/src/main/AndroidManifest.xml
+++ b/Android/PercepT/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="false"
+        android:vmSafeMode="true">
         <activity
             android:name=".ui.MainActivity"
             android:screenOrientation="landscape">
